<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background"
        android:orientation="vertical"
        android:paddingStart="10dp"
        android:paddingTop="15dp"
        android:paddingEnd="10dp"
        tools:context=".presentation.fragment.hello.HelloFragment">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal"
            tools:ignore="UselessParent">

            <TextView
                android:id="@+id/logoTV"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:background="@drawable/button_squircle_app_name"
                android:contentDescription="@string/desc_icon"
                android:drawablePadding="14dp"
                android:fontFamily="@font/inter_bold"
                android:gravity="center"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:text="@string/app_name_space"
                android:textColor="@color/main_text_color"
                android:textSize="19sp"
                app:drawableLeftCompat="@drawable/svg_cheff_hat"
                tools:ignore="ImageContrastCheck" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />


            <ImageView
                android:id="@+id/savedButton"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:background="@drawable/ai_button"
                android:contentDescription="@string/desc_save"
                android:foreground="@drawable/svg_save"
                android:foregroundGravity="center"
                tools:ignore="ImageContrastCheck" />

            <ImageView
                android:id="@+id/shoppingListButton"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginStart="10dp"
                android:background="@drawable/ai_button"
                android:contentDescription="@string/desc_save"
                android:foreground="@drawable/svg_shopping"
                android:foregroundGravity="center"
                tools:ignore="ImageContrastCheck" />

        </LinearLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginBottom="-20dp"
                    android:text="@string/welcome"
                    android:textColor="@color/yellow_top"
                    android:textSize="17sp" />


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:orientation="vertical">

                </LinearLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:id="@+id/linearLayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@drawable/ai_background"
                        android:orientation="vertical"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginStart="15dp"
                            android:layout_marginTop="15dp"
                            android:contentDescription="@string/desc_icon"
                            android:fontFamily="@font/inter_semibold"
                            android:paddingEnd="150dp"
                            android:text="@string/ai_button_info"
                            android:textColor="@color/yellow_bottom"
                            android:textSize="18sp"
                            tools:ignore="ImageContrastCheck,RtlSymmetry,VisualLintBounds" />

                        <TextView
                            android:id="@+id/aiButton"
                            android:layout_width="115dp"
                            android:layout_height="40dp"
                            android:layout_marginStart="20dp"
                            android:layout_marginTop="10dp"
                            android:layout_marginBottom="20dp"
                            android:background="@drawable/button_materials_back2"
                            android:fontFamily="@font/inter_semibold"
                            android:gravity="center"
                            android:text="@string/ai_now"
                            android:textColor="@color/background" />
                    </LinearLayout>

                    <ImageView
                        android:layout_width="170dp"
                        android:layout_height="155dp"
                        android:layout_marginBottom="-9dp"
                        android:contentDescription="@string/app_name"
                        android:src="@drawable/robo"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        tools:ignore="VisualLintBounds" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/categoryRcyc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:overScrollMode="never" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/itemName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/inter_semibold"
                        android:textColor="@color/main_text_color"
                        android:textSize="23sp" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:layout_weight="1"
                        android:fontFamily="@font/inter_semibold"
                        android:text="@string/item_name"
                        android:textColor="@color/main_text_color"
                        android:textSize="23sp" />

                    <TextView
                        android:id="@+id/seeAllButton"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginStart="5dp"
                        android:fontFamily="@font/inter_semibold"
                        android:gravity="center"
                        android:paddingStart="15dp"
                        android:paddingEnd="15dp"
                        android:text="@string/item_all"
                        android:textColor="@color/yellow_bottom"
                        android:textSize="15sp" />

                </LinearLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/foodsRcyc"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="10dp"
                    android:overScrollMode="never" />
            </LinearLayout>

        </ScrollView>
    </LinearLayout>
</layout>