<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingEnd="10dp"
        android:paddingStart="10dp"
        android:background="@color/background"
        android:paddingTop="15dp"
        android:paddingBottom="10dp"
        android:orientation="vertical"
        tools:context=".presentation.fragment.shopping.ShoppingListFragment">

        <!-- &&&&&&&&&& Header &&&&&&&&&&& -->
        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="UselessParent">

            <Button
                android:id="@+id/backButton"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:background="@drawable/ai_button"
                android:contentDescription="@string/desc_save"
                android:foreground="@drawable/svg_back"
                android:foregroundGravity="center"
                tools:ignore="ImageContrastCheck" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0" />

            <TextView
                android:layout_width="match_parent"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/header_shop"
                android:fontFamily="@font/inter_bold"
                android:textSize="20sp"
                android:textColor="@color/main_text_color"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <Button
                android:id="@+id/deleteButton"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:background="@drawable/ai_button"
                android:contentDescription="@string/desc_save"
                android:foreground="@drawable/trash"
                android:foregroundGravity="center"
                tools:ignore="ImageContrastCheck" />
        </LinearLayout>

        <!-- &&&&&&&&&& RECYCLER &&&&&&&&&&& -->
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/shoppingListRcyc"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="5dp"
            android:overScrollMode="never"
            android:visibility="gone"
            android:layout_weight="1" />

        <!-- &&&&&&&&&& RECYCLER &&&&&&&&&&& -->
        <TextView
            android:id="@+id/shoppingListEmpty"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:textColor="@color/whisper_text_color"
            android:gravity="center"
            android:textSize="30sp"
            android:fontFamily="@font/inter_bold"
            android:visibility="visible"
            android:layout_marginTop="5dp"
            android:text="@string/empty_list"
            android:layout_weight="1" />

        <!-- &&&&&&&&&& BOTTOM BUTTON &&&&&&&&&&& -->
        <Button
            android:id="@+id/createListButton"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/ai_button"
            android:fontFamily="@font/inter_bold"
            android:text="@string/shopper_button_select"
            android:textAllCaps="true"
            android:textColor="@color/white" />
    </LinearLayout>
</layout>
