<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical"
    android:paddingStart="10dp"
    android:paddingTop="15dp"
    android:paddingEnd="10dp"
    android:paddingBottom="10dp"
    tools:context=".presentation.fragment.categorie.CategoryFragment">


    <!-- &&&&&&&&&& Header &&&&&&&&&&& -->
    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="UselessParent">

        <Button
            android:id="@+id/backButton"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:background="@drawable/ai_button"
            android:contentDescription="@string/desc_save"
            android:foreground="@drawable/svg_back"
            android:foregroundGravity="center"
            tools:ignore="ImageContrastCheck" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:fontFamily="@font/inter_bold"
            android:gravity="center"
            android:text="@string/header_ing"
            android:textColor="@color/main_text_color"
            android:textSize="20sp" />

        <Button
            android:id="@+id/deleteButton"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:background="@drawable/ai_button"
            android:contentDescription="@string/desc_save"
            android:foreground="@drawable/trash"
            android:foregroundGravity="center"
            tools:ignore="ImageContrastCheck" />
    </LinearLayout>

    <include
        android:id="@+id/ncl"
        layout="@layout/layout_no_connection" />

    <!-- &&&&&&&&&& BOTTOM BUTTON &&&&&&&&&&& -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/materialRcyc"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp"
        android:layout_weight="1"
        android:overScrollMode="never"
        android:visibility="visible" />

    <Button
        android:id="@+id/okButton"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/ai_button"
        android:fontFamily="@font/inter_bold"
        android:padding="10dp"
        android:text="@string/ok"
        android:textAllCaps="true"
        android:textColor="@color/white" />

</LinearLayout>