<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background"
        android:orientation="vertical"
        android:paddingStart="10dp"
        android:paddingTop="15dp"
        android:paddingEnd="10dp"
        android:paddingBottom="15dp"
        tools:context=".presentation.fragment.shopping_add_item.AddListFragment">

        <LinearLayout
            android:id="@+id/linearLayout2"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            tools:ignore="UselessParent">


            <ImageView
                android:id="@+id/backButton"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:background="@drawable/button_squircle_yellow"
                android:contentDescription="@string/desc_save"
                android:foreground="@drawable/svg_back"
                android:foregroundGravity="center"
                tools:ignore="ImageContrastCheck" />

            <TextView
                android:id="@+id/food_names"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:fontFamily="@font/inter_bold"
                android:text="@string/header_ing"
                android:textAlignment="center"
                android:textColor="@color/main_text_color"
                android:textSize="19sp" />


            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:contentDescription="@string/app_name"
                android:foregroundGravity="center"
                tools:ignore="ImageContrastCheck" />

        </LinearLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="50dp">


            <com.google.android.material.imageview.ShapeableImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:background="@drawable/icon_vegan"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.imageview.ShapeableImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:background="@drawable/ai_background"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>


        <EditText
            android:id="@+id/food_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:autofillHints="Malzeme Adı Girin"
            android:background="@drawable/button_materials_back"
            android:fontFamily="@font/inter_semibold"
            android:gravity="center"
            android:hint="Malzeme Adını Giriniz"
            android:maxLength="50"
            android:maxLines="1"
            android:padding="15dp"
            android:textColor="@color/main_text_color"
            android:textColorHint="@color/whisper_text_color"
            android:textSize="16sp" />
    </LinearLayout>
</layout>

