<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.furkanmulayim.tarifce.presentation.fragment.ai.AskAiViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingStart="15dp"
            android:paddingTop="15dp"
            android:paddingEnd="15dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="UselessParent">


            <ImageView
                android:id="@+id/backButton"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:background="@drawable/ai_button"
                android:contentDescription="@string/desc_save"
                android:foreground="@drawable/svg_back"
                android:foregroundGravity="center"
                tools:ignore="ImageContrastCheck" />

            <TextView
                android:id="@+id/food_names"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:fontFamily="@font/inter_bold"
                android:text="@string/header_ing"
                android:textAlignment="center"
                android:textColor="@color/main_text_color"
                android:textSize="19sp" />

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:contentDescription="@string/app_name"
                android:foregroundGravity="center"
                tools:ignore="ImageContrastCheck" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/foodAiRcyc"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1">

            </androidx.recyclerview.widget.RecyclerView>

            <Button
                android:id="@+id/sendButton"
                android:fontFamily="@font/inter_bold"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:text="Bu Yemeği Beğenmedim"
                android:textAllCaps="true"
                android:textColor="@color/bottom_sheet_back"
                android:visibility="gone" />


            <com.facebook.shimmer.ShimmerFrameLayout
                android:id="@+id/shimmerFrameLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:text="YEMEĞİNİZ HAZIRLANIYOR..."
                    android:textAllCaps="true"
                    android:textColor="@color/bottom_sheet_back" />

            </com.facebook.shimmer.ShimmerFrameLayout>
        </LinearLayout>

    </LinearLayout>
</layout>